NetworkPolicies/01-deny-all-traffic.yaml
# This policy will block all traffic for the pod with the label project=xelence
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: web-deny-all
# spec:
#   podSelector:
#     matchLabels:
#       project: xelence
#   ingress: []

#OR Block all pods in the local namespace ignoring the labels
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-traffic-ingress
  namespace: kans
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: []
