NetworkPolicies/02-allow-web-only-accept-traffic.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
  namespace: kans
spec:
  podSelector:
    matchLabels:
      role: web
  ingress:
  - {}
