NetworkPolicies/03-allow-app-accept-traffic-from-web.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
  namespace: kans
spec:
  podSelector:
    matchLabels:
      role: app
  ingress:
  - from:
      - podSelector:
          matchLabels:
            role: web
